--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Portfolio | Trisha Shrivastava</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,13 +18,13 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Trisha Shrivastava</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<p>Compiling Human-Centric Insights</p>
+					<p style="font-style: italic;">Actions One Line of Code at a Time</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#two">Skills & Competencies</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
