--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Trisha Shrivastava</a></h1>
-					<p>Compiling Human-Centric Insights</p></header><br>
+					<p>Compiling Human-Centric Insights</p></header>
 					<p style="font-style: italic;font-size: 12;">Informing Actions One Line of Code at a Time</p> 
 				</header>
 				<nav id="nav">
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills & Competencies</a></li>
 						<li><a href="#three">Notable Projects</a></li>
-						<li><a href="#four"></a>Creative Endeavors</li>
+						<li><a href="#four">Creative Endeavors</a></li>
 						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
@@ -63,13 +63,13 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Skills & Competencies</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
+										<li class="icon solid fa-gears">Analyze data</li>
+										<li class="icon solid fa-chart-line">Visualize data</li>
+										<li class="icon solid fa-presentation-screen">Deliver information and insights</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
 										<li class="icon solid fa-users">Shadow clone technique</li>
 									</ul>
