--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/trishi.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Trisha Shrivastava</a></h1>
-					<p>Compiling Human-Centric Insights</p></header>
-					<p style="font-style: italic;font-size: 12;">Informing Actions One Line of Code at a Time</p> 
+					<p>Data Infrastructure to Information Generation</p></header>
+					
 				</header>
 				<nav id="nav">
 					<ul>
@@ -32,10 +32,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/tshrivas/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.instagram.com/baerxstitches/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/tshrivas05" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="trisha.shrivastava05@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -54,9 +54,14 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hello, World!</h2>
-										<p>Welcome to my own.</p>
+										<p>I'm Trisha. Nice to meet you!</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I'm an aspiring data analyst and engineer looking to give you a streamlined way to generate solutions (and enable you to make your own too). 
+
+									I give contextual meaning to numbers and then explain them in a way that people with attention spans the length of the average TikTok can understand. 
+
+									I also design databases (ETL is my friend), do some stuff "in" the cloud (still haven't quite figured out the right preposition for that), and write code. You can constantly find me riding the fine line between technology and business, where I belong.
+									</p>
 								</div>
 							</section>
 
@@ -64,14 +69,14 @@
 							<section id="two">
 								<div class="container">
 									<h3>Skills & Competencies</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>I can do these things! :)</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-gears">Analyze data</li>
-										<li class="icon solid fa-chart-line">Visualize data</li>
-										<li class="icon solid fa-presentation-screen">Deliver information and insights</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-code">Write Code (Python, SQL, R, Java)</li>
+										<li class="icon solid fa-chart-line">Data Visualization + Analysis</li>
+										<li class="icon solid fa-star">Data-Driven Decision Making</li>
+										<li class="icon solid fa-folder">Project Management</li>
+										<li class="icon solid fa-bolt">Communicate and Monitor KPIs</li>
+										<li class="icon solid fa-users">Teamwork</li>
 									</ul>
 								</div>
 							</section>
