--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 						<li><a href="#two">Skills & Competencies</a></li>
 						<li><a href="#three">Notable Projects</a></li>
 						<li><a href="#four">Creative Endeavors</a></li>
-						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -34,7 +33,7 @@
 						<li><a href="https://www.linkedin.com/in/tshrivas/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/baerxstitches/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/tshrivas05" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="trisha.shrivastava05@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:trisha.shrivastava05@gmail.com?subject=Contact From Website" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -55,11 +54,13 @@
 										<h2>Hello, World!</h2>
 										<p>I'm Trisha. Nice to meet you!</p>
 									</header>
-									<p>I'm an aspiring data analyst and engineer looking to give you a streamlined way to generate solutions (and enable you to make your own too). 
+									<p>I'm an aspiring data analyst and engineer looking to provide you a streamlined way to generate solutions (and enable you to make your own too). 
+									<br>
 									<br>
 									I give contextual meaning to numbers and then explain them in a way that people with attention spans the length of the average TikTok can understand. 
 									<br>
-									I also design databases (ETL is my friend), do some stuff "in" the cloud (still haven't quite figured out the right preposition for that), and write code. You can constantly find me riding the fine line between technology and business, where I belong.
+									<br>
+									I also design databases (ETL is my friend), do some stuff "in" the cloud (still haven't quite figured out the right preposition for that), and write code. You can find me constantly riding the fine line between technology and business, where I belong.
 									</p>
 								</div>
 							</section>
@@ -83,27 +84,27 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Notable Projects</h3>
+									<p>just some code that I wrote at some point in time</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>Home Sweet Home</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4>Deferred, Delayed, and Cancelled</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
+												<h4>UCEducations Tutoring System</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
@@ -114,54 +115,34 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Creative Endeavors</h3>
+									<p>pretty things that I've made besides pictures of data points</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>Ganjimart Merchandise Design</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4>Baerxstitches Crochet</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
+												<h4>Wormhole Logo Design</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
 									</div>
 								</div>
 							</section>						
-						<!-- Five -->
-							<section id="five">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
+
 
 						<!-- Five -->
 						<!--
