--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/trishi.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/trishi.jpg" alt="picture of Trisha" /></span>
 					<h1 id="logo"><a href="#">Trisha Shrivastava</a></h1>
 					<p>Data Infrastructure to Information Generation</p></header>
 				</header>
@@ -91,14 +91,21 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Home Sweet Home</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Web application designed for Bitcamp 2022 - encompassed compiling real estate data into a database (ETL, loaded to CockroachDB), assembling
+												queries to source information, and designing the frontend. Users would be directed to a quiz from the homepage, each quiz question was
+												linked to an attribute of the locations stored in the dataset. Furthermore users could organize the filters dependent upon what they
+												prioritized in a home. After submission, users would be redirected to their results (top 10 locations that matched their filters) populated
+												on a Google Map.
+												**Tech Stack: SQL, Python (Pandas, NumPy, Django), HTML, CSS, GoogleMaps API, CockroachDB**</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Deferred, Delayed, and Cancelled</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Analytics project for Python Analytics Course - encompassed 
+												**Tech Stack: Python (Pandas, NumPy, Matplotlib, Seaborne)**
+												</p>
 											</div>
 										</article>
 										<article>
