--- a/index.html
+++ b/index.html
@@ -95,16 +95,21 @@
 												queries to source information, and designing the frontend. Users would be directed to a quiz from the homepage, each quiz question was
 												linked to an attribute of the locations stored in the dataset. Furthermore users could organize the filters dependent upon what they
 												prioritized in a home. After submission, users would be redirected to their results (top 10 locations that matched their filters) populated
-												on a Google Map.
-												**Tech Stack: SQL, Python (Pandas, NumPy, Django), HTML, CSS, GoogleMaps API, CockroachDB**</p>
+												on a Google Map.</p>
+												<br>
+												<p>**Tech Stack: SQL, Python (Pandas, NumPy, Django), HTML, CSS, GoogleMaps API, CockroachDB**</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Deferred, Delayed, and Cancelled</h4>
-												<p>Analytics project for Python Analytics Course - encompassed 
-												**Tech Stack: Python (Pandas, NumPy, Matplotlib, Seaborne)**
+												<p>Analytics project for Python Analytics Course (2021) - involved merging and munging airline delay data from 2018-2020. Ran descriptive 
+												analytics (seasonal/local trends) and attempted to answer the questions: "What is the mains cause of airline delays?", "Are these delays predictable?",
+												and "What is the impact of airline delays on airline carrier stock price?". 
+												</p>
+												<br> 
+												<p>**Tech Stack: Python (Pandas, NumPy, Matplotlib, Seaborne)**
 												</p>
 											</div>
 										</article>
@@ -112,7 +117,13 @@
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>UCEducations Tutoring System</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Web portal application for IS Undergraduate Capstone (2020), designed for UCEducations - designed and implemented
+												a database system and web portal for a client in the education industry. Functionalities included user-specific views(management, student, tutor),
+												ability for management to match students and tutors, ability for students to take automatically graded assessments, ability 
+												for students and tutors to schedule appointments, and ability for management to view student progress to evaluate tutor effectiveness.
+												</p>
+												<br>
+												<p>**Tech Stack: Bootstrap, HTML, CSS, PHP, SQL, SQLServer**</p>
 											</div>
 										</article>
 									</div>
@@ -129,21 +140,24 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Ganjimart Merchandise Design</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Ganji UMD or Korean Pop Dance Club is a cultural student organization at the University of Maryland. The concept for this piece was
+												to take inspiration from convenience store offerings in Korea and create a subbrand around Ganji called Ganjimart (name inspiration from 
+												FamilyMart).</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Baerxstitches Crochet</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Baerxstitches is my personal brand which caters assorted cute crochet items.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/wormhole.png" alt="" /></a>
 											<div class="inner">
 												<h4>Wormhole Logo Design</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Wormhole is a student-led sci-fi comedy production that was recorded during the pandemic. Huge shoutout 
+													to <a href="https://msanchez.co/home">Manny Sanchez</a> who helped produce and consulted me for this project!</p>
 											</div>
 										</article>
 									</div>
