--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 										<h2>Hello, World!</h2>
 										<p>I'm Trisha. Nice to meet you!</p>
 									</header>
-									<p>I'm currently an Information Systems graduate student at the University of Maryland's Robert H. Smith School of Business, but more importantly I'm an aspiring <strong>data analyst and engineer</strong> looking to provide you a streamlined way to generate solutions (and enable you to make your own too). 
+									<p>I an a recent graduate from the Master's in Information Systems program at the University of Maryland's Robert H. Smith School of Business, but more importantly I'm an aspiring <strong>data analyst and engineer</strong> looking to provide you a streamlined way to generate solutions (and automate them too). 
 									<br>
 									<br>
 									I give contextual meaning to numbers and then explain them in a way that people with attention spans the length of the average TikTok can understand. 
 									<br>
 									<br>
-									I also <strong>design databases</strong> (ETL is my friend), <strong>do some stuff "in" the cloud</strong> (still haven't quite figured out the right preposition for that), and <strong>write code</strong>. You can find me constantly riding the fine line between technology and business, where I belong.
+									I also <strong>design databases</strong> (ETL is my friend), <strong>process big data with cloud technologies</strong> (AWS proficient), and <strong>write scripts to try to predict the future</strong>. You can find me constantly riding the fine line between technology and business, where I belong.
 									</p>
 								</div>
 							</section>
@@ -182,7 +182,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Trisha Shrivastava 2022. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Trisha Shrivastava 2023. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
