--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<h2>Hello, World!</h2>
 										<p>I'm Trisha. Nice to meet you!</p>
 									</header>
-									<p>I an a recent graduate from the Master's in Information Systems program at the University of Maryland's Robert H. Smith School of Business, but more importantly I'm an aspiring <strong>data analyst and engineer</strong> looking to provide you a streamlined way to generate solutions (and automate them too). 
+									<p>I am a recent graduate from the Master's in Information Systems program at the University of Maryland's Robert H. Smith School of Business, but more importantly I'm an aspiring <strong>data analyst and engineer</strong> looking to provide you a streamlined way to generate solutions (and automate them too). 
 									<br>
 									<br>
 									I give contextual meaning to numbers and then explain them in a way that people with attention spans the length of the average TikTok can understand. 
