--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write Code (Python, SQL, R, Java)</li>
 										<li class="icon solid fa-chart-line">Data Visualization + Analysis</li>
+										<li class="icon solid fa-laptop-code">Web Scraping</li>
 										<li class="icon solid fa-star">Data-Driven Decision Making</li>
 										<li class="icon solid fa-folder">Project Management</li>
 										<li class="icon solid fa-bolt">Communicate and Monitor KPIs</li>
-										<li class="icon solid fa-users">Teamwork</li>
 									</ul>
 								</div>
 							</section>
