--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<p>I can do these things! :)</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write Code (Python, SQL, R, Java)</li>
-										<li><a href="https://public.tableau.com/views/Final_Project_Estonia/WhereintheBalticstostarturbidness?:language=en-US&:display_count=n&:origin=viz_share_link" class="icon solid fa-chart-line">Data Visualization + Analysis</a></li>
+										<li class="icon solid fa-chart-line"><a href="https://public.tableau.com/views/Final_Project_Estonia/WhereintheBalticstostarturbidness?:language=en-US&:display_count=n&:origin=viz_share_link"> Data Visualization + Analysis</a></li>
 										<li class="icon solid fa-laptop-code">Web Scraping</li>
 										<li class="icon solid fa-star">Data-Driven Decision Making</li>
 										<li class="icon solid fa-folder">Project Management</li>
