--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="html">
 	<head>
 		<title>Trisha Shrivastava</title>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -20,7 +20,6 @@
 					<span class="image avatar"><img src="images/trishi.jpeg" alt="picture of Trisha" /></span>
 					<h1 id="logo"><a href="#">Trisha Shrivastava</a></h1>
 					<p><em>Data Infrastructure to Information Generation</em></p></header>
-				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
@@ -53,16 +52,12 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Hello, World!</h2>
-										<p>I'm Trisha. Nice to meet you!</p>
+										<p>Hello, I am</p>
+										<h2>Trisha Shrivastava</h2>
+
 									</header>
-									<p>I am a recent graduate from the Master's in Information Systems program at the University of Maryland's Robert H. Smith School of Business, but more importantly I'm an aspiring <strong>data analyst and engineer</strong> looking to provide you a streamlined way to generate solutions (and automate them too). 
-									<br>
-									<br>
-									I give contextual meaning to numbers and then explain them in a way that people with attention spans the length of the average TikTok can understand. 
-									<br>
-									<br>
-									I also <strong>design databases</strong> (ETL is my friend), <strong>process big data with cloud technologies</strong> (AWS proficient), and <strong>write scripts to try to predict the future</strong>. You can find me constantly riding the fine line between technology and business, where I belong.
+									<p>
+										I am a data engineering and data visualization specialist currently working as a <b>data analyst engineer</b> at evolve24.
 									</p>
 								</div>
 							</section>
@@ -75,9 +70,9 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write Code (Python, SQL, R, Java)</li>
 										<li class="icon solid fa-chart-line"><a href="https://public.tableau.com/views/Final_Project_Estonia/WhereintheBalticstostarturbidness?:language=en-US&:display_count=n&:origin=viz_share_link"> Data Visualization + Analysis</a></li>
-										<li class="icon solid fa-laptop-code">Web Scraping</li>
+										<li class="icon solid fa-laptop-code">ETL + Infrastructure</li>
 										<li class="icon solid fa-star">Data-Driven Decision Making</li>
-										<li class="icon solid fa-folder">Project Management</li>
+										<li class="icon solid fa-folder">Product Management</li>
 										<li class="icon solid fa-bolt">Communicate and Monitor KPIs</li>
 									</ul>
 								</div>
@@ -102,6 +97,18 @@
 									<p>just some code that I wrote at some point in time</p>
 									<div class="features">
 										<article>
+											<a class="image"><img src="images/ddc.png" alt="" /></a>
+											<div class="inner">
+												<h4>CRUX AI</h4>
+												<p>Analytics tool that synthesizes open-source data from various data streams into consumable reports with export capabilities -
+													designed and implemented the user interface, as well as data connectivity.
+												</p>
+
+												<p>**Tech Stack: Python (Pandas, NumPy, Dash), LLMs, GCP**
+												</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://devpost.com/software/home-sweet-home-sq46jr" class="image"><img src="images/hsh.png" alt="" /></a>
 											<div class="inner">
 												<h4>Home Sweet Home</h4>
@@ -111,19 +118,6 @@
 												prioritized in a home. After submission, users would be redirected to their results (top 10 locations that matched their filters) populated
 												on a Google Map.</p>
 												<p>**Tech Stack: SQL, Python (Pandas, NumPy, Django), HTML, CSS, GoogleMaps API, CockroachDB**</p>
-											</div>
-										</article>
-										<article>
-											<a class="image"><img src="images/ddc.png" alt="" /></a>
-											<div class="inner">
-												<h4>Deferred, Delayed, and Cancelled</h4>
-												<p>Analytics project for Python Analytics Course (2021) - involved merging and munging airline delay data from 2018-2020. Ran descriptive 
-												analytics (seasonal/local trends) and attempted to answer the questions: "What is the mains cause of airline delays?", "Are these delays predictable?",
-												and "What is the impact of airline delays on airline carrier stock price?". 
-												</p>
-												
-												<p>**Tech Stack: Python (Pandas, NumPy, Matplotlib, Seaborne)**
-												</p>
 											</div>
 										</article>
 										<article>
