--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
 									</header>
 									<p>
-										I am a data engineering and data visualization specialist currently working as a <b>data analyst engineer</b> at evolve24.
+										I am currently working as a <b>data analyst</b> at IBM (Octo). My interests include NLP, distance algorithms, data vizualization, and data design.
+										In addition to these interests, I aspire to gain more knowledge about computer vision and cloud computing!
 									</p>
 								</div>
 							</section>
@@ -97,14 +98,15 @@
 									<p>just some code that I wrote at some point in time</p>
 									<div class="features">
 										<article>
-											<a class="image"><img src="images/ddc.png" alt="" /></a>
+											<a class="image" href="https://www.freepik.com/free-vector/dashboard-user-panel-template_5459021.htm#fromView=search&page=1&position=13&uuid=9add62fd-66c5-486d-bcb7-59addf1fed48"><img src="images\2831035.jpg" alt="Designed by Freepik" /></a>
+											<p>Image sourced from Freepik</p>
 											<div class="inner">
 												<h4>CRUX AI</h4>
-												<p>Analytics tool that synthesizes open-source data from various data streams into consumable reports with export capabilities -
+												<p>Analytics tool that synthesizes open-source data from various data streams into consumable intelligence reports with export capabilities -
 													designed and implemented the user interface, as well as data connectivity.
 												</p>
 
-												<p>**Tech Stack: Python (Pandas, NumPy, Dash), LLMs, GCP**
+												<p>**Tech Stack: Python (Pandas, NumPy, Dash), LLMs, GCP Bigquery**
 												</p>
 											</div>
 										</article>
@@ -176,7 +178,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Trisha Shrivastava 2023. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Trisha Shrivastava 2024. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
