--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 									<p>just some code that I wrote at some point in time</p>
 									<div class="features">
 										<article>
-											<a class="image" href="https://www.freepik.com/free-vector/dashboard-user-panel-template_5459021.htm#fromView=search&page=1&position=13&uuid=9add62fd-66c5-486d-bcb7-59addf1fed48"><img src="images\2831035.jpg" alt="Designed by Freepik" /></a>
-											<p>Image sourced from Freepik</p>
+											<a class="image" href="https://www.freepik.com/free-vector/dashboard-user-panel-template_5459021.htm#fromView=search&page=1&position=13&uuid=9add62fd-66c5-486d-bcb7-59addf1fed48"><img src="images\2831035.jpg" alt="Designed by Freepik" />
+												<p>Image sourced from Freepik</p>
+											</a>
 											<div class="inner">
 												<h4>CRUX AI</h4>
 												<p>Analytics tool that synthesizes open-source data from various data streams into consumable intelligence reports with export capabilities -
